# wasm-chess

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust-ci.yml
builds/: chess_wasm.d.ts  chess_wasm.js  chess_wasm_bg.js  chess_wasm_bg.wasm  chess_wasm_bg.wasm.d.ts  package.json
src/: lib.rs
src/helpers/: find_divergence.rs  legal_moves.rs  mod.rs  parsing.rs  pgn.rs  pgn_reader.rs  tsify.rs  tsify_structs.rs
src/impls/: impl_annotations.rs  impl_board.rs  impl_comments.rs  impl_debug.rs  impl_headers.rs  impl_history.rs  impl_moves.rs  impl_pgn.rs  impl_queries.rs  impl_validation.rs  impl_visitor.rs  mod.rs
src/models/: board_matrix.rs  color_char.rs  mod.rs  move_verbose.rs  piece_obj.rs  piece_symbol.rs  square_str.rs  suffix_symbol.rs  utils.rs
src/pgn_loader/: mod.rs  pgn_reader.rs
src/tests/: attackers_tests.rs  board_tests.rs  castling_rights_tests.rs  comments_test.rs  fen_tests.rs  find_deviation_test.rs  find_divergence_test.rs  find_piece_tests.rs  headers_tests.rs  history_tests.rs  is_promotion_tests.rs  legal_moves_test.rs  load_pgn_tests.rs  mod.rs  move_tests.rs  move_turn_at_tests.rs  native_tests.rs  pgn_tests.rs  put_tests.rs  san_tests.rs  set_turn_tests.rs  square_color_tests.rs  undo_move_test.rs
src/tests/pgn/: ccc-pgn-input-0.pgn  ccc-pgn-output-0.pgn
src/tsify_structs/: board_matrix.rs  mod.rs  move_verbose.rs  others.rs  piece_obj.rs  square_str.rs
src/utils/: find_divergence.rs  mod.rs  parsing.rs  pos_from_fen.rs
